// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Expect to render CounterButton 1`] = `
<button
  id="counter"
  onClick={[Function]}
>
  Count: 
  0
</button>
`;

exports[`correnctly increments the counter 1`] = `
<button
  color="red"
  id="counter"
  onClick={[Function]}
>
  Count: 
  0
</button>
`;
